[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "pybind11 >= 2.10.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "nasap-fit-cpp"
version = "0.1.0"
description = "C++ implementation for high-performance fitting and numerical optimization in NASAP."
authors = [
    "Shumbo Tanabe <8703904728@g.ecc.u-tokyo.ac.jp>",
    "Keisuke Takeuchi <142223934+takeuchi-sci@users.noreply.github.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
numpy = ">=2.4.1,<3.0.0"
pandas = ">=3.0.0,<4.0.0"
pyyaml = ">=6.0.3,<7.0.0"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "nasap-fit"
version = "0.1.0"

[tool.scikit-build]
wheel.packages = ["nasap_fit"]