[build-system]
requires = [
  "scikit-build-core>=0.12",
  "pybind11>=2.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "nasap-fit"
version = "0.1.0"
description = "C++ implementation for high-performance fitting and numerical optimization in NASAP."
readme = "README.md"
authors = [
  { name = "Shumbo Tanabe", email = "8703904728@g.ecc.u-tokyo.ac.jp" },
  { name = "Keisuke Takeuchi", email = "142223934+takeuchi-sci@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.4.1,<3.0.0",
  "pandas>=3.0.0,<4.0.0",
  "pyyaml>=6.0.3,<7.0.0",
]

[tool.scikit-build]
wheel.packages = ["nasap_fit"]
